--- a/index.html
+++ b/index.html
@@ -14,6 +14,324 @@
 
 </head>
 <body>
+      <!-- ----------HEADER START--------- -->
+      <header id="header">
+        <div class="top-header">
+                <div class="box-left">
+                    <img src="./photos/gb.svg" alt="">
+                    <a href="#">EN <i class="fas fa-angle-down"></i></a>
+                    <img src="./photos/us.svg" alt="">
+                    <a href="#">USD <i class="fas fa-angle-down"></i></a>
+                    <p>Free Shipping On All Orders. No Minimum Purchases*</p>
+                </div>
+                <div class="box-right">
+                    <ul class="list-unstyled d-flex m-0 p-0">
+                        <li><a href="#">Theme FAQs</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Rewards Program</a></li>
+                        <li><i class="far fa-user"></i></li>
+                        <li><a href="#">Login</a></li>
+                        <li>or</li>
+                        <li><a href="#">Create An Account</a></li>
+                    </ul>
+                </div>
+        </div>
+        <!-- -----TOP HEADER END---- -->
+
+
+
+        <!-- -----------CENTER HEADER START-------- -->
+        <div class="center-header">
+            <div class="d-flex align-items-center">
+                <div class="box-left">
+                    <i class="ham fas fa-bars"></i>
+                    <img class="img-fluid" src="./photos/caros-lb.png" alt="">
+                </div>
+                <div class="reqem">
+                    <div class="d-flex align-items-center">
+                        <div class="box-text">
+                            <a href="#">+1.800.000.8809</a>
+                            <p>Open 7 days a week</p>
+                        </div>
+                        <div class="box-text-2">
+                         <a href="#">
+                            <input placeholder="Search" type="text">
+                                  <i class="fas fa-search"></i>
+                         </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="box-right">
+                    <a href="#">My Account <i class="stop fas fa-angle-down"></i> </a>
+                    <i class="goo far fa-heart"></i>
+                    <i class="goos fas fa-shopping-cart"></i>
+                </div>
+            </div>
+            </div>
+            <!-- --------------CENTER HEADER END---------------- -->
+
+
+
+
+            <!-- -----------BOTTOM HEADER START-------- -->
+        <div class="bottom-header">
+            <div class="boxes">
+          <div class="d-flex text-align-center">
+              <ul class="d-flex list-unstyled">
+                  <li class="menu-item-has-accessories">
+                      <a href="#">INTERIOR</a>
+                      <div class="sub-menu mega-menu mega-menu-column-4 list-unstyled">
+                          <div class="megaa-menuu">
+                        <div class="mega-left">
+                        <div class="list-item">
+                          <h4 class="title">Sustoproine</h4>
+                        <ul>
+                            <li><a href="#">Dincidunteros</a></li>
+                            <li><a href="#">Loremous</a></li>
+                            <li><a href="#">Comodianos</a></li>
+                            <li><a href="#">Gravidas</a></li>
+                            <li><a href="#">Montemous</a></li>
+                            </ul>
+                      </div>
+                      <div class="list-item">
+                         <h4 class="title">Cosmopolis</h4>
+                         <ul>
+                            <li><a href="#">Dincidunteros</a></li>
+                            <li><a href="#">Loremous</a></li>
+                            <li><a href="#">Comodianos</a></li>
+                            <li><a href="#">Gravidas</a></li>
+                            <li><a href="#">Montemous</a></li>
+                            </ul>
+                    </div>
+                    <div class="list-item">
+                        <h4 class="title">Comodianos</h4>
+                        <ul>
+                            <li><a href="#">Dincidunteros</a></li>
+                            <li><a href="#">Loremous</a></li>
+                            <li><a href="#">Comodianos</a></li>
+                            <li><a href="#">Gravidas</a></li>
+                            <li><a href="#">Montemous</a></li>
+                            </ul>
+                    </div>
+                   <div class="list-item">
+                        <h4 class="title">Bibendumeto</h4>
+                        <ul>
+                            <li><a href="#">Bibendumetos</a></li>
+                            <li><a href="#">Pellentes Habitanto</a></li>
+                            <li><a href="#">Senectus</a></li>
+                            <li><a href="#">Consequatod</a></li>
+                            <li><a href="#">Scelerisque Yurnas</a></li>
+                            <li><a href="#">Loremouticas</a></li>
+                        </ul> 
+                    </div>
+                    <div class="list-item">
+                        <h4 class="title">Milancelos</h4>
+                        <ul>
+                            <li><a href="#">Gravidas</a></li>
+                            <li><a href="#">Comodianos</a></li>
+                            <li><a href="#">Bibendumeto</a></li>
+                            <li><a href="#">Conguros</a></li>
+                            <li><a href="#">Montemous</a></li>
+                            <li><a href="#">Loremous</a></li>
+                        </ul> 
+                    </div>
+                    <div class="list-item">
+                        <h4 class="title">Conguros</h4>
+                        <ul>
+                            <li><a href="#">Bibendumetos</a></li>
+                            <li><a href="#">Pellentes Habitanto</a></li>
+                            <li><a href="#">Senectus</a></li>
+                            <li><a href="#">Consequatod</a></li>
+                            <li><a href="#">Scelerisque Yurnas</a></li>
+                            <li><a href="#">Loremouticas</a></li>
+                        </ul>
+                         </div>
+                    </div>
+                   <div class="mega-right">
+                       <div class="list1">
+                           <div class="text">
+                            <h4>Featured Products</h4>
+                           </div>
+                       <div class="options">
+                        <img class="img-hidden" src="./photos/light-14_270x270.jpg" alt="">
+                        <img class="img-fluid img-see" src="./photos/light-15_270x270.jpg" alt="">
+                        <a class="quick" href="#">Quick View</a>
+                        <a class="collet" href="#">Collette</a>
+                        <a class="viv" href="#">Vivamus pretium facitae mattis pus turpis tortor tirius rutru</a>
+                        <p>$345</p>
+                        <a class="sel" href="#">SELECT OPTIONS</a>
+                       </div>
+                   </div>
+                       <div class="list2">
+                           <img src="./photos/megamenu-banner-9_250x.png" alt="">
+                       </div>
+                </div>
+                </div>
+                </div>
+                </li>
+                  <li class="menu-item-has-accessories"><a href="#">EXTERIOR</a>
+                <div class="sub-menu mega-menu mega-menu-column-5 list-unstyled">
+                    <div class="mega-left">
+                    <div class="list-item">
+                    <h4 class="title">Sustoproine</h4>
+                            <ul>
+                                <li><a href="#">Dincidunteros</a></li>
+                                <li><a href="#">Loremous</a></li>
+                                <li><a href="#">Comodianos</a></li>
+                                <li><a href="#">Gravidas</a></li>
+                                <li><a href="#">Montemous</a></li>
+                                <li><a href="#">Loremouticas</a></li>
+                            </ul>
+                          </div>
+                          <div class="list-item">
+                             <h4 class="title">Cosmopolis</h4>
+                             <ul>
+                                <li><a href="#">Dincidunteros</a></li>
+                                <li><a href="#">Loremous</a></li>
+                                <li><a href="#">Comodianos</a></li>
+                                <li><a href="#">Gravidas</a></li>
+                                <li><a href="#">Montemous</a></li>
+                                <li><a href="#">Loremouticas</a></li>
+                            </ul>
+                        </div>
+                        <div class="list-item">
+                            <h4 class="title">Comodianos</h4>
+                            <ul>
+                                <li><a href="#">Dincidunteros</a></li>
+                                <li><a href="#">Loremous</a></li>
+                                <li><a href="#">Comodianos</a></li>
+                                <li><a href="#">Gravidas</a></li>
+                                <li><a href="#">Montemous</a></li>
+                                <li><a href="#">Loremouticas</a></li>
+                            </ul>
+                        </div>
+                      <div class="list-item">
+                            <h4 class="title">Bibendumeto</h4>
+                            <ul>
+                                <li><a href="#">Bibendumetos</a></li>
+                                <li><a href="#">Pellentes Habitanto</a></li>
+                                <li><a href="#">Senectus</a></li>
+                                <li><a href="#">Consequatod</a></li>
+                                <li><a href="#">Scelerisque Yurnas</a></li>
+                          </ul> 
+                        </div>
+                        <div class="list-item">
+                            <h4 class="title">Milancelos</h4>
+                            <ul>
+                                <li><a href="#">Gravidas</a></li>
+                                <li><a href="#">Comodianos</a></li>
+                                <li><a href="#">Bibendumeto</a></li>
+                                <li><a href="#">Conguros</a></li>
+                                <li><a href="#">Montemous</a></li>
+                                
+                            </ul> 
+                        </div>
+                        <div class="list-item">
+                            <h4 class="title">Conguros</h4>
+                            <ul>
+                                <li><a href="#">Bibendumetos</a></li>
+                                <li><a href="#">Pellentes Habitanto</a></li>
+                                <li><a href="#">Senectus</a></li>
+                                <li><a href="#">Consequatod</a></li>
+                                <li><a href="#">Scelerisque Yurnas</a></li>
+                           </ul>
+                        </div>
+                        </div>
+                        <div class="meca-right">
+                        <img class="img1" src="./photos/megamenu-banner-6_210x.png" alt="">
+                        <img class="img2" src="./photos/megamenu-banner-7_210x.png" alt="">
+                        <img class="img3" src="./photos/megamenu-banner-8_450x.png" alt="">
+                   </div>
+                        </div>
+                  </li>
+                <li class="menu-item-has-accessories">
+                      <a href="#">PERFORMANCE</a>
+                      <ul class="sub-menu list-unstyled">
+                        <li><a href="#">Metroplitanos</a></li>
+                        <li class="drop-a"><a href="#">Sustoproine</a>
+                        <ul class="righ-menu list-unstyled">
+                            <li><a href="#">Pellentes Habitanto</a></li>
+                            <li><a href="#">Custom Wheels</a></li>
+                            <li><a href="#">Senectus Milance</a></li>
+                            <li><a href="#">Senectus Milance</a></li>
+                        </ul>
+                      </li>
+                        <li class="drop-a"><a href="#">Dounes Cosmopolis</a>
+                        <ul class="righ-menu list-unstyled">
+                            <li><a href="#">Scelerisque Dapboe</a></li>
+                            <li><a href="#">Exhaust Systems</a></li>
+                            <li><a href="#">Scelerisque Yurna</a></li>
+                            <li><a href="#">Pellentes Habitanto</a></li>
+                        </ul></li>
+                        <li><a href="#">Loremous</a></li>
+                        <li><a href="#">Hendrer Dulamcos</a></li>
+                        <li><a href="#">Fermentumod</a></li>
+                        <li><a href="#">Curabitur Lurpisolus</a></li>
+                        <li><a href="#">Maecenas Conguros</a></li>                          
+                        </ul>
+                </li>
+                  <li><a href="#">LIGHTING</a></li>
+                  <li class="menu-item-has-accessories"><a href="#">WHEELS & TIRES</a>
+                 <ul class="sub-menu mega-menu mega-menu-column-6 list-unstyled">
+                         <li> <a href="#">Sustoproine</a>
+                            <img src="./photos/megamenu-banner-1_210x.png" alt="">
+                            <a href="#">Dincidunteros</a>
+                            <a href="#">Loremous</a>
+                            <a href="#">Comodianos</a>
+                            <a href="#">Gravidas</a>
+                            <a href="#">Montemous</a></li>
+                         <li> <a href="#">Conguros</a>
+                            <img src="./photos/megamenu-banner-2_210x.png" alt="">
+                            <a href="#">Bibendumetos</a>
+                            <a href="#">Pellentes Habitanto</a>
+                            <a href="#">Senectus</a>
+                            <a href="#">Consequatod</a>
+                            <a href="#">Scelerisque Yurna</a></li>
+                         <li> <a href="#">Cosmopolis</a>
+                            <img src="./photos/megamenu-banner-3_210x.png" alt="">
+                            <a href="#">Dincidunteros</a>
+                            <a href="#">Nectellus</a>
+                            <a href="#">Solutmades</a>
+                            <a href="#">Loremous Comodous</a>
+                            <a href="#">Metroplitanos</a></li>
+                         <li><a href="#">Bibendumeto</a>
+                            <img src="./photos/megamenu-banner-4_210x.png" alt="">
+                            <a href="#">Bibendumetos</a>
+                            <a href="#">Pellentes Habitanto</a>
+                            <a href="#">Senectus</a>
+                            <a href="#">Consequatod</a>
+                            <a href="#">Scelerisque Yurna</a></li>
+                         <li><a href="#">Comodianos</a>
+                            <img src="./photos/megamenu-banner-5_210x.png" alt="">
+                            <a href="#">Dincidunteros</a>
+                            <a href="#">Loremous</a>
+                            <a href="#">Comodianos</a>
+                            <a href="#">Gravidas</a>
+                            <a href="#">Montemous</a></li>
+                     </ul>
+                    </li>
+                <li><a href="#">REPAIR PARTS</a></li>
+                  <li><a href="#">BODY PARTS</a></li>
+                  <li><a href="#">AUDIO & ELECTRONICS</a></li>
+                  <li class="menu-item-has-accessories"><a href="#">DEMO</a>
+                    <ul class="sub-menu list-unstyled">
+                        <li><a href="#">Homepage 1</a></li>
+                        <li><a href="#">Homepage 2</a></li>
+                        <li><a href="#">Homepage 3</a></li>
+                        <li><a href="#">Product Detail 1</a></li>
+                        <li><a href="#">Product Detail 2</a></li>
+                        <li><a href="#">Product Detail 3</a></li>
+                        <li><a href="#">Look Book</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                    </ul>
+                </li>
+               <li><a href="#">BUY THEME</a></li>
+              </ul>
+          </div>  
+          </div>
+          </div>
+        </header>
+   <!-- -------------BOTTOM HEADER END------------ -->
     <!-- SECTION-1 STARTED -->
 
     <section class="section-1-custom">
@@ -739,7 +1057,7 @@
 <div class="col-6">
 <div class="little-box">
          <div class="image"> 
-             <img src="https://cdn.shopify.com/s/files/1/0272/1962/4029/files/card-image-13_570x.jpg?v=1573121307" alt="">
+             <img src="photos/lalax.jpg" alt="">
              </div>
              <div class="overlay"></div>
 <div class="little-text">  
