--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
       <header id="header">
         <div class="top-header">
                 <div class="box-left">
-                    <img src="./photos/gb.svg" alt="">
+                    <a href="index.html">
+                    <img src="./photos/gb.svg" alt="" > </a>
                     <a href="#">EN <i class="fas fa-angle-down"></i></a>
                     <img src="./photos/us.svg" alt="">
                     <a href="#">USD <i class="fas fa-angle-down"></i></a>
@@ -41,7 +42,9 @@
             <div class="d-flex align-items-center">
                 <div class="box-left">
                     <i class="ham fas fa-bars"></i>
+                    <a href="index.html">
                     <img class="img-fluid" src="./photos/caros-lb.png" alt="">
+                </a>
                 </div>
                 <div class="reqem">
                     <div class="d-flex align-items-center">
@@ -67,15 +70,13 @@
             <!-- --------------CENTER HEADER END---------------- -->
 
 
-
-
             <!-- -----------BOTTOM HEADER START-------- -->
         <div class="bottom-header">
             <div class="boxes">
           <div class="d-flex text-align-center">
               <ul class="d-flex list-unstyled">
                   <li class="menu-item-has-accessories">
-                      <a href="#">INTERIOR</a>
+                      <a href="about.html">INTERIOR</a>
                       <div class="sub-menu mega-menu mega-menu-column-4 list-unstyled">
                           <div class="megaa-menuu">
                         <div class="mega-left">
@@ -165,7 +166,7 @@
                 </div>
                 </div>
                 </li>
-                  <li class="menu-item-has-accessories"><a href="#">EXTERIOR</a>
+                  <li class="menu-item-has-accessories"><a href="contact.html">EXTERIOR</a>
                 <div class="sub-menu mega-menu mega-menu-column-5 list-unstyled">
                     <div class="mega-left">
                     <div class="list-item">
@@ -241,7 +242,7 @@
                         </div>
                   </li>
                 <li class="menu-item-has-accessories">
-                      <a href="#">PERFORMANCE</a>
+                      <a href="main.html">PERFORMANCE</a>
                       <ul class="sub-menu list-unstyled">
                         <li><a href="#">Metroplitanos</a></li>
                         <li class="drop-a"><a href="#">Sustoproine</a>
@@ -321,7 +322,7 @@
                         <li><a href="#">Portfolio</a></li>
                     </ul>
                 </li>
-               <li><a href="#">BUY THEME</a></li>
+               <li><a href="map.html">CONTACT</a></li>
               </ul>
           </div>  
           </div>
@@ -810,6 +811,7 @@
             </div>
         </div>
     </div>
+    
 </body>
 </html>
 
