--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <!-- ----------HEADER START--------- -->
       <header id="header">
         <div class="top-header">
-                <div class="box-left">
-                    <img src="./photos/gb.svg" alt="">
+                <div class="box-left">                    
+                    <img src="./photos/gb.svg" alt="" > 
                     <a href="#">EN <i class="fas fa-angle-down"></i></a>
                     <img src="./photos/us.svg" alt="">
                     <a href="#">USD <i class="fas fa-angle-down"></i></a>
@@ -44,7 +44,9 @@
             <div class="d-flex align-items-center">
                 <div class="box-left">
                     <i class="ham fas fa-bars"></i>
+                    <a href="index.html">
                     <img class="img-fluid" src="./photos/caros-lb.png" alt="">
+                </a>
                 </div>
                 <div class="reqem">
                     <div class="d-flex align-items-center">
@@ -70,15 +72,13 @@
             <!-- --------------CENTER HEADER END---------------- -->
 
 
-
-
             <!-- -----------BOTTOM HEADER START-------- -->
         <div class="bottom-header">
             <div class="boxes">
           <div class="d-flex text-align-center">
               <ul class="d-flex list-unstyled">
                   <li class="menu-item-has-accessories">
-                      <a href="#">INTERIOR</a>
+                      <a href="about.html">INTERIOR</a>
                       <div class="sub-menu mega-menu mega-menu-column-4 list-unstyled">
                           <div class="megaa-menuu">
                         <div class="mega-left">
@@ -168,7 +168,7 @@
                 </div>
                 </div>
                 </li>
-                  <li class="menu-item-has-accessories"><a href="#">EXTERIOR</a>
+                  <li class="menu-item-has-accessories"><a href="contact.html">EXTERIOR</a>
                 <div class="sub-menu mega-menu mega-menu-column-5 list-unstyled">
                     <div class="mega-left">
                     <div class="list-item">
@@ -244,7 +244,7 @@
                         </div>
                   </li>
                 <li class="menu-item-has-accessories">
-                      <a href="#">PERFORMANCE</a>
+                      <a href="main.html">PERFORMANCE</a>
                       <ul class="sub-menu list-unstyled">
                         <li><a href="#">Metroplitanos</a></li>
                         <li class="drop-a"><a href="#">Sustoproine</a>
@@ -269,7 +269,7 @@
                         <li><a href="#">Maecenas Conguros</a></li>                          
                         </ul>
                 </li>
-                  <li><a href="main.html">LIGHTING</a></li>
+                  <li><a href="#">LIGHTING</a></li>
                   <li class="menu-item-has-accessories"><a href="#">WHEELS & TIRES</a>
                  <ul class="sub-menu mega-menu mega-menu-column-6 list-unstyled">
                          <li> <a href="#">Sustoproine</a>
@@ -324,7 +324,7 @@
                         <li><a href="#">Portfolio</a></li>
                     </ul>
                 </li>
-               <li><a href="#">BUY THEME</a></li>
+               <li><a href="map.html">CONTACT</a></li>
               </ul>
           </div>  
           </div>
