--- a/about.html
+++ b/about.html
@@ -14,9 +14,8 @@
       <!-- ----------HEADER START--------- -->
       <header id="header">
         <div class="top-header">
-                <div class="box-left">
-                    <a href="index.html">
-                    <img src="./photos/gb.svg" alt="" > </a>
+                <div class="box-left">                    
+                    <img src="./photos/gb.svg" alt="" > 
                     <a href="#">EN <i class="fas fa-angle-down"></i></a>
                     <img src="./photos/us.svg" alt="">
                     <a href="#">USD <i class="fas fa-angle-down"></i></a>
@@ -267,10 +266,10 @@
                         <li><a href="#">Maecenas Conguros</a></li>                          
                         </ul>
                 </li>
-                  <li><a href="#">LIGHTING</a></li>
+                  <li><a href="anar.html">LIGHTING</a></li>
                   <li class="menu-item-has-accessories"><a href="#">WHEELS & TIRES</a>
                  <ul class="sub-menu mega-menu mega-menu-column-6 list-unstyled">
-                         <li> <a href="#">Sustoproine</a>
+                         <li> <a href="femo.html">Sustoproine</a>
                             <img src="./photos/megamenu-banner-1_210x.png" alt="">
                             <a href="#">Dincidunteros</a>
                             <a href="#">Loremous</a>
