--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
                         <li><a href="#">Maecenas Conguros</a></li>                          
                         </ul>
                 </li>
-                  <li><a href="#">LIGHTING</a></li>
+                  <li><a href="anar.html">LIGHTING</a></li>
                   <li class="menu-item-has-accessories"><a href="#">WHEELS & TIRES</a>
                  <ul class="sub-menu mega-menu mega-menu-column-6 list-unstyled">
-                         <li> <a href="#">Sustoproine</a>
+                         <li> <a href="femo.html">Sustoproine</a>
                             <img src="./photos/megamenu-banner-1_210x.png" alt="">
                             <a href="#">Dincidunteros</a>
                             <a href="#">Loremous</a>
@@ -390,8 +390,6 @@
                       <!-- </li> -->
                     
                   </ul>
-
-
                   <a href="#" class="shop1">SEARCH</a>
                   <i class="far fa-sync-alt redicon"></i>
             </div>
